# test

./: README.md  StartAll.bat  build_client_qt1310.bat
build-qt1310/: CMakeCache.txt  Makefile  cmake_install.cmake  startup.trace
build-qt1310/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-qt1310/shopping_client_autogen/: deps
build-qt1310/shopping_client_autogen/3G5O7Q7RTY/: moc_shoppingcart.cpp  moc_shoppingcart.cpp.d
build-qt1310/shopping_client_autogen/6YEA5652QU/: moc_chatwindow.cpp  moc_chatwindow.cpp.d
build-qt1310/shopping_client_autogen/IFHPYZAWOD/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-qt1310/shopping_client_autogen/LQ5S74IWJL/: moc_registerdialog.cpp  moc_registerdialog.cpp.d
build-qt1310/shopping_client_autogen/XLQVKIHBGC/: moc_loginwindow.cpp  moc_loginwindow.cpp.d
build-qt1310/shopping_client_autogen/include/: ui_registerdialog.h  ui_shoppingcart.h
client/: CMakeLists.txt  CMakeUserPresets.json  build.bat  run.bat
client/build-qt1310/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
client/build-qt1310/.cmake/api/v1/reply/: cache-v2-6a3f65ecc8a38575880f.json  cache-v2-8673601f62ee1587c806.json  cmakeFiles-v1-0da20a1cff9ffd05b90b.json  codemodel-v2-1088019acb95ab7d5101.json  codemodel-v2-7a3dbf08a166730abc81.json  codemodel-v2-a02ace6ec95ceca2b9f4.json  index-2025-09-22T15-30-00-0030.json  index-2025-09-24T04-52-24-0508.json  index-2025-09-26T16-18-59-0798.json  target-package_app-Release-9a807d38a3a46d2bba5c.json  target-shopping_client-Debug-aab89a49782f882fd6b1.json  target-shopping_client-Release-118723f8fd1800284c72.json  target-shopping_client-Release-a079a78af734117170d3.json  target-shopping_client_autogen-Release-5bd5b2af744a91f86bc3.json  target-shopping_client_autogen_timestamp_deps-Debug-034499b29ecbe2a1621e.json  toolchains-v1-4546d352ee8684f816c0.json
client/build-qt1310/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
client/build-qt1310/shopping_client_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
client/build-qt1310/shopping_client_autogen/3G5O7Q7RTY/: moc_shoppingcart.cpp.d
client/build-qt1310/shopping_client_autogen/3YJK5W5UP7/: qrc_resources.cpp
client/build-qt1310/shopping_client_autogen/6YEA5652QU/: moc_chatwindow.cpp.d
client/build-qt1310/shopping_client_autogen/IFHPYZAWOD/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
client/build-qt1310/shopping_client_autogen/LQ5S74IWJL/: moc_registerdialog.cpp  moc_registerdialog.cpp.d
client/build-qt1310/shopping_client_autogen/XLQVKIHBGC/: moc_loginwindow.cpp.d
client/build-qt1310/shopping_client_autogen/include/: ui_loginwindow.h
client/include/: chatwindow.h  loginwindow.h  mainwindow.h  shoppingcart.h  ui_chatwindow.h  ui_loginwindow.h  ui_mainwindow.h  ui_shoppingcart.h
client/include/chat/: chatwindow.h
client/include/login/: loginwindow.h
client/include/mainwindow/: mainwindow.h
client/include/register/: registerdialog.h
client/include/shopping/: shoppingcart.h
client/resources/styles/: style.qss
client/src/: main.cpp
client/src/chat/: chatwindow.cpp
client/src/login/: loginwindow.cpp
client/src/mainwindow/: mainwindow.cpp
client/src/register/: registerdialog.cpp
client/src/shopping/: shoppingcart.cpp
client/ui/: chatwindow.ui  loginwindow.ui  mainwindow.ui  registerdialog.ui  shoppingcart.ui
database/sql/: alter_20250926_add_chat_messages.sql  alter_20250926_sales_and_clear_orders.sql  alter_20250927_add_enabled_to_clients.sql  schema.sql  shopping_system.sql
docs/: api.md  backend_sort_and_sales.md  cpp-style-guide.md  database.md  deployment.md  java-style-guide.md  架构.md
server/: build.bat  pom.xml  run.bat  run.ps1
server/BOOT-INF/classes/: application.properties
server/server-data/: carts.json  orders.json  users.json  users_profile.json
server/src/main/java/com/shopping/server/: ShoppingServerApplication.java
server/src/main/java/com/shopping/server/admin/: AdminConsoleLauncher.java  AdminFrame.java
server/src/main/java/com/shopping/server/config/: StaticResourceConfig.java
server/src/main/java/com/shopping/server/infra/: StartupDatabaseProbe.java
server/src/main/java/com/shopping/server/model/: CartItem.java  ChatMessage.java  Client.java  Order.java  OrderHeader.java  OrderItem.java  OrderStatus.java  Product.java  ProductType.java
server/src/main/java/com/shopping/server/repository/: CartItemRepository.java  ChatMessageRepository.java  ClientRepository.java  OrderHeaderRepository.java  OrderItemRepository.java  OrderRepository.java  ProductRepository.java  ProductTypeRepository.java
server/src/main/java/com/shopping/server/service/: OrderProcessingService.java  OrderService.java  ProductService.java
server/src/main/java/com/shopping/server/socket/: SocketMessageHandler.java  SocketServer.java
server/src/main/java/com/shopping/server/web/: AuthController.java  DebugController.java
server/src/main/resources/: application.properties  application.yml
